--- a/looking.htm
+++ b/looking.htm
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="look.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
-
+    <script src="https://kit.fontawesome.com/0c1608366f.js"></script>
   </head>
   <body>
 
-    <div style="max-width:500px;margin:auto;">
+    <div style="max-width:96%;margin:auto;">
       <img class="mySlides" src="images/fashion1.jpg" style="width:100%;">
       <img class="mySlides" src="images/fashion3.jpg" style="width:100%;">
       <img class="mySlides" src="images/fashion4.jpg" style="width:100%;">
@@ -35,39 +35,93 @@
 
     <div class="gallery">
       <figure>
-        <img src="images/news3.jpg">
+        <img src="images/fashion1.jpg">
         <figcaption>
-          Julie's Rabbit Ears
+          Ladies jackects<br>
+          $300
         </figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
       </figure>
       <figure>
-        <img src="images/news4.jpg">
-        <figcaption>The Innocent Look</figcaption>
+        <img src="images/fashion3.jpg">
+        <figcaption>Twin set <br>$50</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
       </figure>
       <figure>
-        <img src="images/news6.jpg">
-        <figcaption>Big Eyed Buggy</figcaption>
+        <img src="images/fashion2.jpg">
+        <figcaption>Ladies summer tops<br>$15</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
       </figure>
       <figure>
-         <img src="images/news5.jpg">
-         <figcaption>The Saint Doggo</figcaption>
+         <img src="images/fashion4.jpg">
+         <figcaption>Men's T-shirt<br> $20</figcaption>
+         <i class="fas fa-heart"><br>1000</i>
+         <i class="fas fa-cart-plus"><br>Save</i>
+         <i class="fas fa-share-alt"><br>Share</i>
        </figure>
        <figure>
-       <img src="images/news2.jpg">
-       <figcaption>Big eyed buddy</figcaption>
+       <img src="images/fashion2.jpg">
+       <figcaption>Ladies summer tops<br>$15</figcaption>
+       <i class="fas fa-heart"><br>1000</i>
+       <i class="fas fa-cart-plus"><br>Save</i>
+       <i class="fas fa-share-alt"><br>Share</i>
      </figure>
      <figure>
-        <img src="images/news1.jpg">
-        <figcaption>The Innocent Look</figcaption>
+        <img src="images/fashion1.jpg">
+        <figcaption>  Ladies jackects<br>
+          $300</figcaption>
+          <i class="fas fa-heart"><br>1000</i>
+          <i class="fas fa-cart-plus"><br>Save</i>
+          <i class="fas fa-share-alt"><br>Share</i>
       </figure>
       <figure>
-        <img src="images/news7.jpg">
-        <figcaption>The Saint Doggo</figcaption>
+        <img src="images/fashion2.jpg">
+        <figcaption>Ladies summer tops<br>$15</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
       </figure>
       <figure>
-        <img src="images/news3.jpg">
-        <figcaption>Julie's Rabbit Ears</figcaption>
-      </figure
+        <img src="images/fashion3.jpg">
+        <figcaption>Twin set <br>$50</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
+      </figure>
+      <figure>
+        <img src="images/fashion1.jpg">
+        <figcaption>  Ladies jackects<br>  $300</figcaption>
+          <i class="fas fa-heart"><br>1000</i>
+          <i class="fas fa-cart-plus"><br>Save</i>
+          <i class="fas fa-share-alt"><br>Share</i>
+      </figure>
+      <figure>
+        <img src="images/fashion4.jpg">
+        <figcaption>Men's T-shirt<br> $20</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
+      </figure>
+      <figure>
+        <img src="images/fashion3.jpg">
+        <figcaption>Twin set <br>$50</figcaption>
+        <i class="fas fa-heart"><br>1000</i>
+        <i class="fas fa-cart-plus"><br>Save</i>
+        <i class="fas fa-share-alt"><br>Share</i>
+      </figure>
+      <figure>
+        <img src="images/fashion1.jpg">
+        <figcaption>  Ladies jackects<br>  $300</figcaption>
+          <i class="fas fa-heart"><br>1000</i>
+          <i class="fas fa-cart-plus"><br>Save</i>
+          <i class="fas fa-share-alt"><br>Share</i>
+      </figure>
     </div>
   </body>
 </html>
