--- a/looking.htm
+++ b/looking.htm
@@ -9,10 +9,10 @@
   </head>
   <body>
 
-    <div style="max-width:96%;margin:auto;">
-      <img class="mySlides" src="images/fashion1.jpg" style="width:100%;">
-      <img class="mySlides" src="images/fashion3.jpg" style="width:100%;">
-      <img class="mySlides" src="images/fashion4.jpg" style="width:100%;">
+    <div class="img">
+      <img class="mySlides" src="images/fashion1.jpg" style="width:100%;height:300px">
+      <img class="mySlides" src="images/fashion3.jpg" style="width:100%;height:300px;">
+      <img class="mySlides" src="images/fashion4.jpg" style="width:100%;height:300px;">
     </div>
 
     <script>
