--- a/looking.htm
+++ b/looking.htm
@@ -6,31 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0c1608366f.js"></script>
+
+  </body>
   </head>
   <body>
 
     <div class="img">
-      <img class="mySlides" src="images/fashion1.jpg" style="width:100%;height:300px">
-      <img class="mySlides" src="images/fashion3.jpg" style="width:100%;height:300px;">
-      <img class="mySlides" src="images/fashion4.jpg" style="width:100%;height:300px;">
+      <img class="mySlides " src="images/fashion1.jpg">
+      <img class="mySlides " src="images/fashion3.jpg">
+      <img class="mySlides " src="images/fashion4.jpg">
     </div>
 
-    <script>
-    var myIndex = 0;
-    carousel();
-
-    function carousel() {
-      var i;
-      var x = document.getElementsByClassName("mySlides");
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      myIndex++;
-      if (myIndex > x.length) {myIndex = 1}
-      x[myIndex-1].style.display = "block";
-      setTimeout(carousel, 2000); // Change image every 2 seconds
-    }
-    </script>
 
 
     <div class="gallery">
@@ -123,5 +109,6 @@
           <i class="fas fa-share-alt"><br>Share</i>
       </figure>
     </div>
-  </body>
+      <script src="look.js"  charset="utf-8"></script>
+</body>
 </html>
